--- a/client/app/public/style.css
+++ b/client/app/public/style.css
@@ -1,5 +1,8 @@
 * {
-  margin: 0;
+  margin: 0; }
+
+html {
+  background: #1d364d;
   color: white; }
 
 body {
@@ -13,7 +16,7 @@ body {
   margin-top: 20px; }
 
 .users-head-details {
-  background: #ff9800; }
+  background: #372118; }
 
 .welcome-message {
   margin-top: 20px;
@@ -34,8 +37,7 @@ body {
   color: red; }
 
 .custom-logo-wrap {
-  float: left;
-  margin-left: 15%;
+  margin-left: 2%;
   font-weight: bold; }
 
 .welcome-container-button {
@@ -45,18 +47,18 @@ body {
   border: 1px solid #FF9800;
   font-size: 17px;
   font-weight: normal;
+  color: white !important;
   display: inline-block; }
 
 .welcome-container-button:focus {
   background-color: #FF9800; }
 
-.welcome-container-button:first-child {
+.welcome-container-button {
   float: left;
   min-width: 100px;
   padding-top: 8px;
   padding-bottom: 8px;
-  background-color: rgba(255, 152, 0, 0.6);
-  color: white !important; }
+  background-color: rgba(255, 152, 0, 0.6); }
 
 .welcome-container-button:last-child,
 .welcome-container-button:last-child:focus {
@@ -65,8 +67,11 @@ body {
   overflow: hidden;
   line-height: 10px;
   min-width: 200px;
-  background: rgba(13, 14, 9, 0.6);
-  border-color: #0D0E09; }
+  background-color: rgba(255, 152, 0, 0.6);
+  border-color: rgba(255, 152, 0, 0.6); }
+
+.welcome-container-button a {
+  color: white !important; }
 
 .welcome-container-div-button {
   width: 30%;
@@ -82,11 +87,15 @@ body {
   float: left;
   margin-top: 5%;
   margin-right: 2%;
-  margin-left: 10%; }
+  margin-left: 10%;
+  color: white !important; }
 
 .div-container-form {
   background-color: rgba(0, 0, 0, 0.5) !important;
   height: 100vh; }
+
+.book-form {
+  background-color: rgba(0, 0, 0, 0.5) !important; }
 
 .div-container-form form {
   position: absolute;
@@ -102,9 +111,6 @@ body {
   color: white;
   font-size: 120%;
   font-weight: bold; }
-
-.input-field input[type='text'] {
-  color: white !important; }
 
 .login-button,
 .login-button:focus {
@@ -197,12 +203,8 @@ body {
   background-size: cover;
   height: 100vh !important; }
 
-.dashboard-color {
-  background-color: rgba(6, 0, 0, 0.9);
-  height: 100vh; }
-
 .dashboard-head-color {
-  background: #FF9800 !important;
+  background: #372118 !important;
   margin-top: auto; }
 
 .return-book-button {
@@ -219,7 +221,10 @@ body {
 .button-color {
   background: blue; }
 
-/* Body Styling */
+.add-book-modal {
+  color: black; }
+
+/* Body Styling old styles*/
 #body-content {
   width: 100%;
   box-sizing: border-box;
@@ -805,3 +810,5 @@ button.toast-close-button {
   #toast-container > div {
     padding: 15px 15px 15px 50px;
     width: 25em; } }
+
+/*# sourceMappingURL=style.css.map*/
