--- a/client/app/public/style.css
+++ b/client/app/public/style.css
@@ -171,7 +171,7 @@ body {
 .admin-books {
   width: 70%;
   float: right;
-  margin: -400px 10px 0 0; }
+  margin-top: 100px; }
 
 .btn-edit-add {
   float: right;
