feature(add-book):admin user can add book

--- a/client/app/public/style.css
+++ b/client/app/public/style.css
@@ -221,7 +221,8 @@ body {
 .button-color {
   background: blue; }
 
-.add-book-modal {
+.add-book-modal,
+.edit-book-modal {
   color: black; }
 
 /* Body Styling old styles*/
