--- a/client/app/src/sass/style.scss
+++ b/client/app/src/sass/style.scss
@@ -237,6 +237,11 @@ body {
 .add-book-modal, .edit-book-modal{
     color: black;
 }
+
+.isLoading {
+    margin-left: 15px;
+    font-size: 20px;
+}
 /* Body Styling old styles*/
 
 #body-content{
