--- a/client/app/public/style.css
+++ b/client/app/public/style.css
@@ -1,22 +1,11 @@
 * {
   margin: 0; }
 
-html {
-  background: #1d364d;
-  color: white; }
+nav {
+  background: rgba(0, 0, 0, 0.7); }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-family: white; }
-
-.custom-nav-wrapper {
-  background: transparent;
-  float: right;
-  padding-right: 5%;
-  margin-top: 20px; }
-
-.users-head-details {
-  background: #372118; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .welcome-message {
   margin-top: 20px;
@@ -24,13 +13,15 @@ body {
 
 .welcome-message-container {
   font-size: 30px;
-  padding-top: 20%;
+  padding-top: 10%;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  height: 100vh; }
+  color: white; }
 
 .welcome-message-container h2 {
   font-weight: bold; }
+
+.footer {
+  background: transparent; }
 
 /* General Styling*/
 .red {
@@ -40,59 +31,15 @@ body {
   margin-left: 2%;
   font-weight: bold; }
 
-.welcome-container-button {
-  padding: 5px;
-  border-radius: 2px;
-  background-color: #FF9800;
-  border: 1px solid #FF9800;
-  font-size: 17px;
-  font-weight: normal;
-  color: white !important;
-  display: inline-block; }
-
-.welcome-container-button:focus {
-  background-color: #FF9800; }
-
-.welcome-container-button {
-  float: left;
-  min-width: 100px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  background-color: rgba(255, 152, 0, 0.6); }
-
-.welcome-container-button:last-child,
-.welcome-container-button:last-child:focus {
-  float: left;
-  margin-left: 5%;
-  overflow: hidden;
-  line-height: 10px;
-  min-width: 200px;
-  background-color: rgba(255, 152, 0, 0.6);
-  border-color: rgba(255, 152, 0, 0.6); }
-
-.welcome-container-button a {
-  color: white !important; }
-
-.welcome-container-div-button {
-  width: 30%;
-  margin: 0 auto;
-  text-align: center;
-  padding-top: 20px;
-  overflow: hidden; }
-
-.welcome-container-button img {
-  float: left; }
-
-.welcome-container-button p {
-  float: left;
-  margin-top: 5%;
-  margin-right: 2%;
-  margin-left: 10%;
-  color: white !important; }
-
 .div-container-form {
   background-color: rgba(0, 0, 0, 0.5) !important;
-  height: 100vh; }
+  margin-top: 10%;
+  border-radius: 5px;
+  padding: 5px 30px;
+  color: white; }
+
+.sign-title {
+  color: white; }
 
 .book-form {
   background-color: rgba(0, 0, 0, 0.5) !important; }
@@ -114,12 +61,12 @@ body {
 
 .login-button,
 .login-button:focus {
-  width: 30%;
+  width: fit-content;
   margin: 0 auto;
   text-align: center;
   padding: 10px;
   overflow: hidden;
-  background: rgba(255, 152, 0, 0.7);
+  background: #FF9800;
   border: 1px solid rgba(255, 152, 0, 0.9);
   border-radius: 4px; }
 
@@ -141,9 +88,6 @@ body {
 .div-container-signup-form label {
   color: white !important; }
 
-.log-in-title {
-  text-align: center; }
-
 .error-block {
   color: red; }
 
@@ -151,7 +95,7 @@ body {
   width: 25%;
   float: left; }
 
-.books-compartment {
+.books-container {
   margin-top: 90px;
   width: 70%;
   float: right;
@@ -159,64 +103,30 @@ body {
   flex-wrap: wrap;
   justify-content: space-around; }
 
+.card-color {
+  color: black; }
+
 .book-categories {
-  float: left;
-  margin: 100px 0  0 10px;
-  font-size: 30px;
-  width: 25%; }
-
-.link-color {
-  color: white; }
-
-.admin-books {
-  width: 70%;
-  float: right;
-  margin-top: 100px; }
+  font-size: 18px; }
 
 .btn-edit-add {
   float: right;
   margin-top: 40px; }
 
 .book-size {
-  width: 20%;
-  display: inline-block;
-  margin-right: 20px; }
+  height: 250px; }
 
 .text-size {
   font-size: 100% !important; }
 
-.custom-card-content {
-  padding: 0 !important; }
-
 .description {
   color: red; }
 
-.admin-books {
-  width: 75%;
-  float: right; }
-
 .image {
   background: url("http://cdn.wallpapersafari.com/99/90/zj8TKM.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100vh !important; }
-
-.dashboard-head-color {
-  background: #372118 !important;
-  margin-top: auto; }
-
-.return-book-button {
-  background-color: #555555; }
-
-.users-profile {
-  background: gray;
-  color: black;
-  width: 50%; }
-
-.users-profile thead {
-  background: black; }
+  position: absolute;
+  height: 100%;
+  width: 100%; }
 
 .button-color {
   background: blue; }
@@ -224,6 +134,50 @@ body {
 .add-book-modal,
 .edit-book-modal {
   color: black; }
+
+.isLoading {
+  margin-left: 15px;
+  font-size: 20px; }
+
+.custom-nav-wrapper {
+  background: #ff9800; }
+
+.mr-2 {
+  margin-right: 1.5em; }
+
+.categories-color {
+  color: black; }
+
+.mt-2 {
+  margin-top: 2em; }
+
+.ml-5 {
+  margin-left: 5em; }
+
+.fs-2 {
+  font-size: 20px;
+  font-weight: 1px; }
+
+.fs-1 {
+  font-size: 15x;
+  font-weight: 1px; }
+
+.bc {
+  background: rgba(46, 24, 8, 0.85);
+  padding: 2px; }
+
+.google-button {
+  padding: 5px;
+  border-radius: 2px;
+  background-color: #FF9800;
+  border: 1px solid #FF9800;
+  font-size: 17px;
+  font-weight: normal;
+  color: white !important;
+  display: inline-block;
+  cursor: pointer !important;
+  border: none;
+  position: absolute; }
 
 /* Body Styling old styles*/
 #body-content {
@@ -811,5 +765,3 @@ button.toast-close-button {
   #toast-container > div {
     padding: 15px 15px 15px 50px;
     width: 25em; } }
-
-/*# sourceMappingURL=style.css.map*/
