chore(component-test):implement test for components

--- a/client/app/src/sass/style.scss
+++ b/client/app/src/sass/style.scss
@@ -151,7 +151,7 @@ height: 250px;
 .image {
     background: url("./img/hellobooksimage.jpg") no-repeat center center fixed; 
     position: absolute;
-    height: 100%;
+    height: 110vh;
     width: 100%;
 }
 
