--- a/client/app/src/sass/style.scss
+++ b/client/app/src/sass/style.scss
@@ -231,3 +231,34 @@ height: 250px;
     word-break: break-word;
     
 }
+
+.pagination{
+   position: fixed;
+   bottom:30px;
+   height:45px;
+   width:100%;
+}
+
+@media only screen and (max-width: 480px) {
+    .welcome-message-container {
+  font-size: 15px;
+  padding-top: 10%;
+  text-align: center;
+  color: white;
+}
+.welcome-message-container:nth-child(2) {
+  font-size: 15px;
+  font-weight: bold
+
+
+}
+
+.sign-title{
+    color: white;
+    font-size: 20px;
+}
+
+.signup-button {
+    margin-bottom: 10px;
+}
+}
