bug(feedback):implement render props and remove console errors

--- a/client/app/src/asset/sass/style.scss
+++ b/client/app/src/asset/sass/style.scss
@@ -188,6 +188,10 @@ height: 250px;
 .mr-1{
     margin-right: 0.5em;
 }
+
+.clickable {
+    border: 1px solid red;
+}
 .mt-2{
     margin-top: 2em;
 }
